@@ -10,9 +10,6 @@ import static com.baeldung.common.ConsoleColors.redBoldUnderlined;
 import static com.baeldung.common.GlobalConstants.CODE_TAG;
 import static com.baeldung.common.GlobalConstants.LANGUAGE_JAVA_CLASS_NAME;
 import static com.baeldung.common.GlobalConstants.POM_FILE_NAME_LOWERCASE;
-import static com.baeldung.common.GlobalConstants.tutorialsRepoLocalPath;
-import static com.baeldung.common.GlobalConstants.tutorialsRepoMasterPath;
-import static com.baeldung.common.GlobalConstants.tutorialsRepos;
 import static java.util.stream.Collectors.toList;
 import static org.junit.jupiter.api.Assertions.fail;
 
@@ -838,7 +835,7 @@ public class Utils {
         logger.info(colordHeading("Please find below child modules for: {}"), tutorialsParentModuleFinderFileVisitor.getArtificateId());
 
         tutorialsParentModuleFinderFileVisitor.getChildModules().forEach(modulePath -> {
-            String gitUrl = StringUtils.removeEnd(StringUtils.removeStart(modulePath, GlobalConstants.tutorialsRepoLocalPath), "pom.xml");
+            String gitUrl = StringUtils.removeEnd(StringUtils.removeStart(modulePath, GithubRepositories.TUTORIALS.repoLocalPath()), "pom.xml");
             System.out.println("https://github.com/eugenp/tutorials/tree/master" + gitUrl);
         });
     }
@@ -865,6 +862,10 @@ public class Utils {
         } catch (InterruptedException e) {
             //
         }
+    }
+
+    public static void fetchGitRepo(String redownload, GitHubRepoVO repository) throws IOException, GitAPIException {
+        fetchGitRepo(redownload, Paths.get(repository.repoLocalPath()), repository.repoUrl());
     }
 
     public static void fetchGitRepo(String redownloadTutorialsRepo, Path repoDirectoryPath, String repoGitUrl) throws IOException, InvalidRemoteException, TransportException, GitAPIException {
@@ -905,7 +906,7 @@ public class Utils {
         logger.info(colordHeading("Please find below unalighed Moudles"));
 
         moduleAlignmentValidatorFileVisitor.getInvalidModules().forEach(modulePath -> {
-            String gitUrl = StringUtils.removeEnd(StringUtils.removeStart(modulePath, GlobalConstants.tutorialsRepoLocalPath), "pom.xml");
+            String gitUrl = StringUtils.removeEnd(StringUtils.removeStart(modulePath, GithubRepositories.TUTORIALS.repoLocalPath()), "pom.xml");
             System.out.println("https://github.com/eugenp/tutorials/tree/master" + gitUrl);
         });
     }
@@ -916,7 +917,7 @@ public class Utils {
         }
 
         moduleAlignmentValidatorFileVisitor.getUnparsableModule().forEach(modulePath -> {
-            String gitUrl = StringUtils.removeEnd(StringUtils.removeStart(modulePath, GlobalConstants.tutorialsRepoLocalPath), "pom.xml");
+            String gitUrl = StringUtils.removeEnd(StringUtils.removeStart(modulePath, GithubRepositories.TUTORIALS.repoLocalPath()), "pom.xml");
             System.out.println("https://github.com/eugenp/tutorials/tree/master" + gitUrl);
         });
     }
@@ -946,7 +947,7 @@ public class Utils {
         List<String> readmeList = null;
         Map<GitHubRepoVO, List<String>> readmes = new HashMap<GitHubRepoVO, List<String>>();
 
-        for(GitHubRepoVO repo: tutorialsRepos) {
+        for(GitHubRepoVO repo: GithubRepositories.getRepositories()) {
             readmeList = new ArrayList<>();
             Path repoLocalPath = Paths.get(repo.repoLocalPath());
             Utils.fetchGitRepo(GlobalConstants.NO, repoLocalPath, repo.repoUrl());
@@ -954,7 +955,11 @@ public class Utils {
             ReadmeFileVisitor readmeFileVisitor = new ReadmeFileVisitor(repo.repoLocalPath());
             Files.walkFileTree(repoLocalPath, readmeFileVisitor);
             if(convertPathToHttpUrl) {
-                readmeList.addAll(readmeFileVisitor.getReadmeList().stream().map(replaceTutorialLocalPathWithHttpUrl(repo.repoLocalPath(), repo.repoMasterHttpPath())).collect(toList()));
+                readmeList.addAll(readmeFileVisitor.getReadmeList()
+                    .stream()
+                    .map(repo::getHttpUrlByLocalPath)
+                    .toList()
+                );
             }else {
                 readmeList.addAll(readmeFileVisitor.getReadmeList());
             }
@@ -1000,7 +1005,6 @@ public class Utils {
 
     public static Function<String, String> replaceJavaTutorialLocalPathWithHttpUrl = path -> tutorialsRepoMasterPath.concat(StringUtils.removeStart(path, tutorialsRepoLocalPath));
 
-
     public static List<String> getLinksToTheBaeldungSite(Document doc) {
         Elements baeldungUrls = doc.select("a[href*="+GlobalConstants.BAELDUNG_DOMAIN_NAME+"]");
         return baeldungUrls.stream().map(e -> e.attr("href")).collect(toList());
@@ -1019,22 +1023,23 @@ public class Utils {
     }
 
     public static String getErrorMessageForNotBuiltModules(
-            List<MavenProjectVO> modulesMissingInDefault,
-            List<MavenProjectVO> modulesMissingInIntegration) {
+        GitHubRepoVO repository,
+        List<MavenProjectVO> modulesMissingInDefault,
+        List<MavenProjectVO> modulesMissingInIntegration) {
 
         StringBuilder sb = new StringBuilder("Module Missing in default* profiles ");
         sb.append("\n----------------------------------- \n");
-        modulesMissingInDefault.forEach(module -> sb.append(removeRepoLocalPath(module.getPomFileLocation())).append("\n"));
+        modulesMissingInDefault.forEach(module -> sb.append(removeRepoLocalPath(repository, module.getPomFileLocation())).append("\n"));
 
         sb.append("\nModule Missing in integration* profiles");
         sb.append("\n----------------------------------- \n");
-        modulesMissingInIntegration.forEach(module -> sb.append(removeRepoLocalPath(module.getPomFileLocation())).append("\n"));
+        modulesMissingInIntegration.forEach(module -> sb.append(removeRepoLocalPath(repository, module.getPomFileLocation())).append("\n"));
 
         return sb.toString();
     }
 
-    public static String removeRepoLocalPath(String directoryName) {
-        return directoryName.replace(tutorialsRepoLocalPath, "").replace("/" + POM_FILE_NAME_LOWERCASE, "");
+    public static String removeRepoLocalPath(GitHubRepoVO repository, String directoryName) {
+        return directoryName.replace(repository.repoLocalPath(), "").replace("/" + POM_FILE_NAME_LOWERCASE, "");
     }
 
     public static String summarizeExecution(int metrics, Map<String, Integer> executedTests, Map<String, Integer> failedTests) {
